Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16543

Replicating to spider is fragile without retries

    XMLWordPrintable

Details

    Description

      I encountered a failure in the replication to a spider table that is not mentioned in the recommendations at https://mariadb.com/kb/en/library/spider-storage-engine-overview/#some-server-variables-to-set-when-using-spider.

      From 'show slave status\G':

                      Last_SQL_Errno: 1429
                      Last_SQL_Error: Could not execute Update_rows_v1 event on table db.t3; Unable to connect to foreign data source: spider-datanode3, Error_code: 1429; handler error No Error!; the event's master log binlog.000164, end_log_pos 52742152
      

      It did work again after:

      start slave sql_thread;

      Can these issues be retried within the spider engine instead of failing in the engine and retried in the replication? (or are they failing after multiple attempts in the engine and the replication just continues to retry until it succeeds?)

      Also I would expect the default settings to handle this, rather than having to add configuration mentioned in the link above.

      Attachments

        Activity

          People

            Kentoku Kentoku Shiba (Inactive)
            mattiasjonsson Mattias Jonsson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.25d
                1.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.