MDEV-16543 Replicating to spider is fragile without retries